src/components/layout/CourseAppBanner.css
.course-banner{
    padding:70px 20px;
    background:#f7f7f7;
}

.course-banner-container{
    max-width:1200px;
    margin:auto;
    background:#fff;
    display:flex;
    align-items:center;
    padding:10px 50px;
    position:relative;
    overflow:visible;
    border:1px solid #ececec;
    height:220px;
}


.banner-image {
    width: 280px;
    height: 300px;          /* Height of the visible area */
    position: relative;
    display: flex;
    justify-content: center;
    align-items: flex-end;
    overflow: visible;       /* Hides the cropped part */
}

.phone-wrapper {
    width: 170px;
    height: 300px;          /* Visible portion of the phone */
    overflow: hidden;
    position: relative;
    z-index: 2;
    transform:translateY(-40px);
}



.phone-wrapper img {
    width: 170px;
    height: auto;
    display: block;

    /* Move image down so the bottom gets cropped */
    transform: translateY(25px);
}


/* .banner-image img{
    width:170px;
    position:relative;
    z-index:2;
} */


/* .blue-circle{
    width:160px;
    height:160px;
    background: #3c8df6;
    border-radius:50%;
    position:absolute;
    left:20px;
    bottom:-20px;
}

.green-circle{
    width:55px;
    height:55px;
    background:#7ac943;
    border-radius:50%;
    position:absolute;
    right:35px;
    bottom:30px; 
} */


.blue-circle{
    position:absolute;
    width:250px;
    height:250px;
    border-radius:50%;
    background:#3c8df6;
    left:10px;
    bottom:20px;
    z-index:1;
    clip-path:inset(0px 0px 35px 0px) !important;
}



/* .green-circle{
    position:absolute;
    width:55px;
    height:55px;
    border-radius:50%;
    background:#7ac943;
    left:165px;
    bottom: 105px;
    z-index: 2;
} */

.banner-content{
    flex:1;
}


.banner-content p{
    font-size:15px;
    color:#666;
    line-height:1.7;
    max-width:700px;
}


.banner-buttons{
    display:flex;
    align-items:center;
    gap:15px;
    margin-top:25px;
    flex-wrap:wrap;
}


.learn-btn{
    padding:12px 24px;
    border:1px solid #2f80ed;
    background:#fff;
    color:#2f80ed;
    cursor:pointer;
    font-weight:600;
    transition:.3s;
}


.learn-btn:hover{
    background:#2f80ed;
    color:#fff;
}


/* .store-btn{
    height:42px;
    cursor:pointer;
    transition:0.3;
} */



/* .store-btn:hover{
    transform:scale(1.05);
} */


.app-store-btn{
    display:flex;
    align-items: center;
    gap:10px;
    
    background:#000;
    color:#fff;
    
    border:none;
    border-radius:8px;
    
    padding:8px 16px;
    cursor:pointer;

    transition:0.3s ease;
    height:36px;
}


.app-store-btn:hover{
    background:#1a1a1a;
}

.apple-icon{
    width:26px;
    height:26px;
    object-fit: contain;
}


.app-store-text{
    display:flex;
    flex-direction: column;
    align-items: flex-start;
    line-height: 1.1;
}

.small-text{
    font-size:10px;
}


.big-text{
    font-size:18px;
    font-weight: 600;
}


.google-play-btn{
    display:flex;
    align-items: center;
    justify-content: center;
    gap:10px;

    padding:12px 24px;

    background: #000;
    color:#fff;

    border:none;
    border-radius:8px;

    cursor:pointer;
    transition:0.3s ease;

    padding:8px 16px;
    height:36px;
}

.google-play-btn:hover{
    background: #1a1a1a;
}


.google-icon{
    width:22px;
    height:22px;
    object-fit: contain;
}


.google-play-text{
    display:flex;
    flex-direction: column;
    align-items: flex-start;
    line-height: 1.1;
}

